fix input spacing

--- a/css/main.css
+++ b/css/main.css
@@ -127,13 +127,16 @@ input {
   height: 10rem;
   padding: 0;
   margin: 0;
-  margin-top: 4.5rem;
+  margin-top: 4.37rem;
   outline: 0;
   background-color: transparent;
-  text-align: right;
   color: #fff;
   border: none;
   border-bottom: 3px dotted #dedede;
+}
+
+#minutes-input {
+  text-align: right;
 }
 
 /* UTILITY CLASSES */
